--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.4",
     "axios": "^0.27.2",
+    "millify": "^5.0.0",
     "next": "latest",
     "next-redux-wrapper": "^7.0.5",
     "react": "18.1.0",
