--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.4",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
+    "html-react-parser": "^3.0.3",
     "millify": "^5.0.0",
+    "moment": "^2.29.4",
     "next": "latest",
     "next-redux-wrapper": "^7.0.5",
     "react": "18.1.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
